lesson23/diagnostic.yaml
apiVersion: v1
kind: Pod
metadata:
  name: diagnostic-tool-pod
  namespace: dev
spec:
  containers:
  - name: busybox
    image: busybox:1.30.1
    command: ["sleep", "3600"]
  serviceAccountName: diagnostic-tool-sa
