lesson23/mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
 name: mysql
 namespace: dev
spec:
 replicas: 1
 selector:
   matchLabels:
     app: mysql
 template:
   metadata:
     labels:
       app: mysql
   spec:
     containers:
       - name: mysql
         image: mysql:latest
