lesson23/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: wordpress
 namespace: dev
spec:
 replicas: 1
 selector:
   matchLabels:
     app: wordpress
 template:
   metadata:
     labels:
       app: wordpress
   spec:
     containers:
       - name: wordpress
         image: wordpress:latest
