lesson23/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: wordpress
 namespace: dev
spec:
 selector:
   app: wordpress
 ports:
   - protocol: TCP
     port: 80
     targetPort: 80
 type: NodePort
